feat: integrated AI provider selection (Gemini/Grok) into bill upload